<resources>
    <string name="app_name">SeoulTech\nECG Monitor</string>
    <string name="main_title">ECG Monitor</string>
    <string name="location_permission_required">위치 정보 권한이 필요합니다.</string>
    <string name="location_permission_grant">허용하기</string>
    <string name="location_permission_description">블루투스 ECG 센서의 검색을 위해서\n위치 정보 접근 권한을 허용해주세요.</string>
    <string name="bluetooth_disabled">블루투스가 꺼져있습니다.</string>
    <string name="bluetooth_disabled_description">ECG 센서를 검색하려면 블루투스를 켜주세요.</string>
    <string name="bluetooth_on">블루투스 켜기</string>

    <string name="scan_title">ECG 센서 찾기</string>
    <string name="scan_scanning">검색 중..</string>
    <string name="scan_description">ECG 센서의 전원을 켜고\n휴대전화를 ECG 센서와 가깝게 유지하세요.</string>

    <string name="notification_connected">심박수를 측정 중입니다</string>
    <string name="notification_disconnected">ECG 센서와의 연결이 끊어져 심박수를 측정할 수 없습니다.</string>
    <string name="notification_description">[주의] 심전도를 측정하기 위한 ECG 센서와의 연결을 유지하기 위한 백그라운드 서비스입니다. 본 서비스 종료 시, 심전도 모니터링이 중단됩니다.</string>
    <string name="notification_bluetooth_disabled">블루투스가 꺼져있어 심전도 측정이 불가능합니다.\n블루투스를 켜주세요.</string>
    <string name="notification_failure">ECG 센서와의 연결에 실패하였습니다. 다시 시도해주세요.</string>

    <string name="monitor_title">그래프</string>
    <string name="monitor_menu_disconnect">연결 끊기</string>
    <string name="monitor_menu_disconnect_description">현재 연결된 기와의 페어링을 끊습니다.</string>
    <string name="monitor_no_heart_rate">--</string>
    <string name="monitor_snackbar_connected">연결되었습니다!</string>
    <string name="monitor_snackbar_disconnected">연결 시도 중입니다. ECG 센서의 전원을 확인해주세요.</string>
    <string name="monitor_snackbar_fail">연결에 실패하였습니다. ECG 센서를 다시 등록해주세요.</string>
    <string name="monitor_disconnect_dialog_title">ECG 센서와의 연결을 끊으시겠습니까?</string>
    <string name="monitor_disconnect_dialog_message">더 이상 해당 기기가 측정하는 심전도 데이터를 확인할 수 없습니다.</string>
    <string name="monitor_disconnect_dialog_possitive_button">연결 끊기</string>
    <string name="monitor_disconnect_dialog_negative_button">닫기</string>

    <string name="banner_no_device">앱과 연결된 ECG 센서가 없습니다.\nECG 센서 찾기를 눌러 연결해주세요.</string>
    <string name="banner_enable_bluetooth">블루투스 켜기</string>
    <string name="banner_bluetooth_disabled">블루투스가 꺼져있습니다. 블루투스를 켜주세요.</string>

    <string name="abnormal_sms_tachycardia">%s님의 심박수가 높습니다. (%d)</string>
    <string name="abnormal_sms_bradycardia">%s님의 심박수가 낮습니다. (%d)</string>
    <string name="abnormal_sms_arrhythmia">%s님의 심장 박동 간격이 불규칙합니다.</string>
    <string name="abnormal_notification_tachycardia">심박수가 정상 범위보다 높습니다. (%d)</string>
    <string name="abnormal_notification_bradycardia">심박수가 정상 범위보다 낮습니다. (%d)</string>
    <string name="abnormal_notification_arrhythmia">심장 박동 간격이 불규칙합니다.</string>
    <string name="abnormal_channel_name">이상 심박수 감지 알림</string>
    <string name="abnormal_channel_description">일정 시간 이상 심박수가 정상 범위를 벗어나거나 심방 박동이 불규칙한 경우, 알림을 발생합니다.</string>

    <string name="setting_title">설정</string>
    <string name="setting_generic_title">기본 정보</string>
    <string name="setting_name_title">이름</string>
    <string name="setting_abnormal_title">이상 심박수 알림</string>
    <string name="setting_notification_title">푸시 알림</string>
    <string name="setting_notification_description">이상 심박수 감지 시 푸시 알림을 발생합니다.</string>
    <string name="setting_sms_title">문자 알림</string>
    <string name="setting_sms_description">이상 심박수 감지 시 등록된 연락처로 문자를 보냅니다.</string>
    <string name="setting_title_add_contact">문자 알림 연락처 등록</string>
    <string name="menu_monitor_setting">설정</string>
    <string name="setting_name_default">아무개</string>
    <string name="setting_dialog_title">연락처 추가하기</string>
    <string name="setting_dialog_select1">주소록에서 추가하기</string>
    <string name="setting_dialog_select2">직접 추가하기</string>
    <string name="setting_add_contact_button">추가하기</string>

    <string name="dialog_add_contact_name">이름</string>
    <string name="dialog_add_contact_number">전화번호</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_add">추가</string>
    <string name="setting_dialog_remove_title">연락처 삭제하기</string>
    <string name="setting_dialog_remove_message">연락처를 삭제하시겠습니까?</string>
    <string name="dialog_remove">삭제</string>

    <string name="contact_title">연락처</string>
    <string name="contactsearch_hint">검색</string>
    <string name="contactsearch_result_count">%d개 검색됨</string>
    <string name="contactsearch_no_result">검색 결과가 없습니다.</string>

    <string name="bpmhistory_title">기록</string>
    <string name="history_no_data_title">측정된 데이터가 없습니다.</string>
    <string name="history_no_data_describe">ECG 센서와 연결하여 심박수 데이터를 기록할 수 있습니다.</string>
    <string name="history_selected_date_format">%d년 %d월 %d일</string>

</resources>