<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <PreferenceCategory
        app:key="generic"
        app:title="@string/setting_generic_title">

        <EditTextPreference
            app:icon="@drawable/ic_profile_24"
            app:key="user_name"
            app:title="@string/setting_name_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="abnormal"
        app:title="@string/setting_abnormal_title">

        <SwitchPreferenceCompat
            app:key="push_alert"
            app:icon="@drawable/ic_notifications_24"
            app:summary="@string/setting_notification_description"
            app:title="@string/setting_notification_title" />

        <SwitchPreferenceCompat
            app:key="sms"
            app:icon="@drawable/ic_sms_24"
            app:summary="@string/setting_sms_description"
            app:title="@string/setting_sms_title" />

    </PreferenceCategory>

</PreferenceScreen>